2011-03-11  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Taper/Scribe.pm: If leom is supported by device,
	  then the dle can be split.
	* perl/Amanda/Taper/Worker.pm: Send leom setting to
	  get_splitting_args_from_config.
	* server-src/planner.c: dle can use more than one tape if allow-split
	  is set, this is to handle leom device where splitsize can be 0.

2011-03-10  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer/disk.pm: Use -l to check symlink existance.

2011-03-10  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amadmin.c: export quote host and disk name, import parse
	  quoted host and disk name.

2011-03-09  Jean-Louis Martineau <martineau@zmanda.com>
	* VERSION: 3.2.2

2011-03-09  Jean-Louis Martineau <martineau@zmanda.com>
	* ReleaseNotes, NEWS: Add changes for 3.2.2

2011-03-08  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amsamba.pl: Use smbclient -TF for restore.

2011-03-07  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amtrmidx.c: Fix memory leak.

2011-02-14  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driver.c: flush even if flush threshold are not met if
	  it save tape space.

2011-02-03  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Taper/Scribe.pm: get_splitting_args_from_config() always
	  return 'allow_split', get_xfer_dest() take a allow_split param,
	  set $self->{'allow_split'}, Abort a dump on EOM if splitting is
	  not allowed.
	* perl/Amanda/Taper/Worker.pm: Do not set can_cache_inform if splitting
	  is not allowed.
	* installcheck/Amanda_Taper_Scribe.pl: Fix for previous change.
	* installcheck/taper.pl: Test that dump are aborted on EOM.

2011-02-01  Jean-Louis Martineau <martineau@zmanda.com>
	Patch by Jan Görig
	* server-src/amrestore.pl: Allow to go to next file with -p.

2011-01-26  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Logfile.swg: "%lld" do not works with perl-5.6.
